# LLM-Quantization-Runtime

./: CMakeLists.txt  README.md  commit_log.txt  updates_log.txt
python/: inference.py
src/: runtime.cpp
src/kernels/: quantization.cu
